Formatting, navigation, misc fixes

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#publications">Publications</a></li>
+            <li><a href="#talks">Talks</a></li>
+            <li><a href="#projects">Projects</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -62,9 +63,10 @@
         </p>
         <p><strong>Email</strong>: danil.v.annenkov at gmail.com</p>
         <p><strong>Phone</strong>: +45 23 62 57 30</p>
-        </div>
-        <h2>Research interests</h2>
-      <p>
+      </div>
+      <div id="main">
+        <h2 id="research" class="anchor">Research interests</h2>
+        <p>
         I am interested in functional programming, type theory,
         applications of proof assistants to mechanization
         of programming language semantics and formalisation of mathematics (category theory).
@@ -74,138 +76,143 @@
         During my PhD I was visiting University of Nottingham, where I worked with Paolo Capriotti
         and Nicolai Kraus on formalisation of two-level type theory
         (Homotopy Type Theory extended with strict equality) in the Lean proof assistant.
-      </p>
-      <h2>Publications</h2>
-      <ul>
-        <li>Danil Annenkov, Paolo Capriotti, Nicolai Kraus.
-          Two-Level Type Theory and Applications. Submitted to ACM Transactions on
-          Computational Logic (TOCL)
-          [<a target="_blank" href="https://arxiv.org/abs/1705.03307">arXiv</a>]
-          [<a target="_blank" href="https://github.com/annenkov/two-level">
-            Lean code</a>]
-        </li>
-        <li>
-          Danil Annenkov and Martin Elsman. Towards Certified Compilation of Financial Contracts.
-          In Proceedings of the 28th Nordic Workshop on Programming Theory( NWPT’16 ).
-          Aalborg, DK. November, 2016
-          [<a target="_blank" href="papers/NWPTPayoffLang.pdf">PDF</a>]
-          [<a target="_blank" href="http://nwpt2016.cs.aau.dk/nwpt2016-proceedings.pdf"> Proceedings </a>]
-          [<a target="_blank" href="https://github.com/annenkov/contracts">Haskell and Coq code</a>]
-        </li>
-        <li>
-          Annenkov, D.V., Cherkashin, E.A.,
-          Generation technique for Django MVC web framework using the Stratego
-          transformation language.
-          36th International Convention on Information and
-          Communication Technology, Electronics and Microelectronics (MIPRO),
-          IEEE, pp. 1084-1087, 2013
-          [<a target="_blank" href="http://ieeexplore.ieee.org/document/6596418/">IEEEXplore </a> ].
-        </li>
-        <li>
-          Annenkov, D.V., Domain-specific languages as a foundation of the approach to software
-          development​.  Proceedings of the conference “Vinerovskie chteniya”,
-          pp. 142-146 (in Russian), 2013.
-        </li>
-        <li>
-          Evgeny A. Cherkashin , Polina V. Belykh, Danil V. Annenkov, Christina K. Paskal.
-          A Document Content Logical Layer Induction on the Base of Ontologies
-          and Processing Changes.
-          Proc. of International Conference on Applied Internet and Information Technologies,
-          University of Novi Sad Technical Faculty «Mihailo Pupin»,
-          Zrenjanin, Serbia, 2013. C. 252-257.
-          [<a target="_blank" href="http://www.tfzr.uns.ac.rs/aiit/old/archives/AIIT2013/Proceedings.pdf">
-            Proceedings
-          </a>]
-        </li>
-        <li>
-          Cherkashin, E.A., Paramonov, V.V., Fedorov, R.K., Terehin, I.N., Pozdnyak, E.I.,
-          Annenkov, D.V., Information Systems Framework Synthesis on the Base of a Logical Approach.
-          Proceedings of International Conference on Applied Internet and Information Technologies,
-          October 26, Serbia, Zrenjanin. pp. 239-244, 2012.
-          [<a target="_blank" href="http://www.tfzr.uns.ac.rs/aiit/old/archives/AIIT2012/Proceedings_AIIT2012.pdf">
-            Proceedings
-          </a>]
-        </li>
-      </ul>
-      <h2>Talks</h2>
-      <ul>
-        <li>Towards Certified Compilation of Financial Contracts.
-          Nordic Workshop on Programming Theory(NWPT’16), November 2016.
-          [<a target="_blank" href="papers/NWPT16Slides.pdf">PDF</a>]
-        </li>
-        <li>Verifying the generation of payoff-language expressions.
-          <a target="_blank" href="http://hiperfit.dk/">HIPERFIT</a> Workshop, March 2016
-          [<a target="_blank" href="papers/HIPERFIT_Workshop_2016.pdf">PDF</a>]
-        </li>
-      </ul>
+        </p>
+        <h2 id="publications" class="anchor">Publications</h2>
+        <ul>
+          <li>Danil Annenkov, Paolo Capriotti, Nicolai Kraus.
+            Two-Level Type Theory and Applications. Submitted to ACM Transactions on
+            Computational Logic (TOCL)
+            [<a target="_blank" href="https://arxiv.org/abs/1705.03307">arXiv</a>]
+            [<a target="_blank" href="https://github.com/annenkov/two-level">
+              Lean code</a>]
+          </li>
+          <li>
+            Danil Annenkov and Martin Elsman. Towards Certified Compilation of Financial Contracts.
+            In Proceedings of the 28th Nordic Workshop on Programming Theory( NWPT’16 ).
+            Aalborg, DK. November, 2016
+            [<a target="_blank" href="papers/NWPTPayoffLang.pdf">PDF</a>]
+            [<a target="_blank" href="http://nwpt2016.cs.aau.dk/nwpt2016-proceedings.pdf"> Proceedings </a>]
+            [<a target="_blank" href="https://github.com/annenkov/contracts">Haskell and Coq code</a>]
+          </li>
+          <li>
+            Annenkov, D.V., Cherkashin, E.A.,
+            Generation technique for Django MVC web framework using the Stratego
+            transformation language.
+            36th International Convention on Information and
+            Communication Technology, Electronics and Microelectronics (MIPRO),
+            IEEE, pp. 1084-1087, 2013
+            [<a target="_blank" href="http://ieeexplore.ieee.org/document/6596418/">IEEEXplore </a> ].
+          </li>
+          <li>
+            Annenkov, D.V., Domain-specific languages as a foundation of the approach to software
+            development​.  Proceedings of the conference “Vinerovskie chteniya”,
+            pp. 142-146 (in Russian), 2013.
+          </li>
+          <li>
+            Evgeny A. Cherkashin , Polina V. Belykh, Danil V. Annenkov, Christina K. Paskal.
+            A Document Content Logical Layer Induction on the Base of Ontologies
+            and Processing Changes.
+            Proc. of International Conference on Applied Internet and Information Technologies,
+            University of Novi Sad Technical Faculty «Mihailo Pupin»,
+            Zrenjanin, Serbia, 2013. C. 252-257.
+            [<a target="_blank" href="http://www.tfzr.uns.ac.rs/aiit/old/archives/AIIT2013/Proceedings.pdf"> Proceedings </a>]
+          </li>
+          <li>
+            Cherkashin, E.A., Paramonov, V.V., Fedorov, R.K., Terehin, I.N., Pozdnyak, E.I.,
+            Annenkov, D.V., Information Systems Framework Synthesis on the Base of a Logical Approach.
+            Proceedings of International Conference on Applied Internet and Information Technologies,
+            October 26, Serbia, Zrenjanin. pp. 239-244, 2012.
+            [<a target="_blank" href="http://www.tfzr.uns.ac.rs/aiit/old/archives/AIIT2012/Proceedings_AIIT2012.pdf">
+              Proceedings
+            </a>]
+          </li>
+        </ul>
+        <h2 id="talks" class="anchor">Talks</h2>
+        <ul>
+          <li>Towards Certified Compilation of Financial Contracts.
+            Nordic Workshop on Programming Theory(NWPT’16), November 2016.
+            [<a target="_blank" href="papers/NWPT16Slides.pdf">PDF</a>]
+          </li>
+          <li>Verifying the generation of payoff-language expressions.
+            <a target="_blank" href="http://hiperfit.dk/">HIPERFIT</a> Workshop, March 2016
+            [<a target="_blank" href="papers/HIPERFIT_Workshop_2016.pdf">PDF</a>]
+          </li>
+        </ul>
 
-      <h2>Projects and repositories</h2>
-      <h3><a target="_blank" href="https://github.com/annenkov/two-level">
-          Two-level type theory</a></h3>
-      <p>
-        An implementation of two-level type theory in the Lean proof assistant.
-        Two-level type theory is a version of Martin-Löf type theory (MLTT), which
-        consists of two fragments: the fibrant fragment (Homotopy Type Theory) and
-        the strict fragment (MLTT with uniqueness of identity proofs). In our development in
-        the Lean proof assistant we demonstrate, how two-level type theory can be encoded
-        in existing proof assistant. Using the definition of category from Lean's standard
-        library, we define limits and construct general limits in the category of pretypes in the
-        strict fragment. Also, we define inverse diagrams and show how some results of the
-        theory on inverse diagrams can be internalised in two-level type theory and developed in
-        the proof assistant.
-      </p>
-      <h3><a target="_blank" href="https://github.com/annenkov/contracts">
-          Financial Contracts DSL</a></h3>
-      <p>
-        An extension of the Contract DSL presented in
-        <a target="_blank" href="https://github.com/annenkov/contracts/blob/master/doc/icfp2015.pdf">
+        <h2 id="projects" class="anchor">Projects and repositories</h2>
+        <p>
+          Not exhaustive list of projects I have contributed to.
+          My repositories:
+            on <a target="_blank" href="https://github.com/annenkov/">GitHub</a>,
+            on <a target="_blank" href="https://bitbucket.org/ib_soft/">Bitbucket</a>
+        </p>
+        <h3><a target="_blank" href="https://github.com/annenkov/two-level">
+            Two-level type theory</a></h3>
+        <p>
+          An implementation of two-level type theory in the Lean proof assistant.
+          Two-level type theory is a version of Martin-Löf type theory (MLTT), which
+          consists of two fragments: the fibrant fragment (Homotopy Type Theory) and
+          the strict fragment (MLTT with uniqueness of identity proofs). In our development in
+          the Lean proof assistant we demonstrate, how two-level type theory can be encoded
+          in existing proof assistant. Using the definition of category from Lean's standard
+          library, we define limits and construct general limits in the category of pretypes in the
+          strict fragment. Also, we define inverse diagrams and show how some results of the
+          theory on inverse diagrams can be internalised in two-level type theory and developed in
+          the proof assistant.
+        </p>
+        <h3><a target="_blank" href="https://github.com/annenkov/contracts">
+            Financial Contracts DSL</a></h3>
+        <p>
+          An extension of the Contract DSL presented in
+          <a target="_blank" href="https://github.com/annenkov/contracts/blob/master/doc/icfp2015.pdf">
           ICFP 2015 paper</a> with templating features, and certified compilation to a
-        simple intermediate payoff expression language (PEL). This expression language can be used to obtain so called  &quotpayoff expression&quot for using in a context of a &quotpricing engine&quot (software, that uses probabilistic modeling of possible future contract price using Monte-Carlo simulation).
-        We use Coq to prove soundness of the compiler from the Contract DSL to PEL, and
-        use Coq's code extraction feature, to obtain correct Haskell implementation of the compiler.
-      </p>
-      <h3><a target="_blank" href="https://github.com/annenkov/stlcnorm">
-        Normalisation for Simply-Typed Lambda-calculus in Coq</a>
-      [<a href="https://annenkov.github.io/stlcnorm/Stlc.stlc.html">nice-looking coqdoc-html version</a>]</h3>
-    <p>Elegant and self-contained proof of normalisation for call-by-value
-      simply-typed lambda calculus in the Coq proof assistant.</p>
-    <h3><a target="_blank" href="https://github.com/HIPERFIT/prototype">
-          The HIPERFIT Portfolio Management Prototype</a></h3>
-      <p>
-        Haskell implementation of a simple contract management system,
-        where contracts are represented using the
-        <a href="https://github.com/annenkov/contracts">Contract DSL</a>.
-        The prototype features web-interface with automatically generated input forms from
-        Haskell data type definitions, and integration with
-        <a href="https://github.com/HIPERFIT/finpar">FINPAR</a>
-        (high-performance pricing engine) through OpenCL code generation.
-      </p>
-      <h3><a target="_blank" href="https://github.com/annenkov/unmix">
-          UNMIX ported to Racket</a></h3>
-      <p>
-        A simple program specializer (based on partial evaluation) for a subset of Scheme,
-        originally developed by
-        <a target="_blank" href="http://pat.keldysh.ru/~roman/">Sergei Romanenko</a> in 1990-1993,
-        ported to the modern scheme-like
-        <a target="_blank" href="https://racket-lang.org/">Racket</a> language
-        to make UNMIX usable for wider audience.
-      </p>
-      <h3><a target="_blank" href="https://github.com/annenkov/unmix">
-          A minimal supercompiler for simple lazy language
-          (first-order functional language) written in Stratego/XT</a></h3>
-      <p>
-        An interpreter and minimal supercompiler for simple lazy language
-        (first-order functional language) written in Stratego/XT transformation language,
-        part of the Spoofax language workbench. Minimal supercompiler implementation
-        is inspired by the elegant Haskell implementation
-        <a target="_blank" href="https://github.com/ilya-klyuchnikov/sc-mini">SC Mini</a>.
-        Spoofax works on Eclipse platform and allows one to create full-featured
-        IDE plugin with syntax highlighting, perform semantic analysis and context completion.
-        My implementation aims to give an environment to experiment with
-        the supercompiler for educational purposes.
-      </p>
+          simple intermediate payoff expression language (PEL). This expression language can be used to obtain so called  &quotpayoff expression&quot for using in a context of a &quotpricing engine&quot (software, that uses probabilistic modeling of possible future contract price using Monte-Carlo simulation).
+          We use Coq to prove soundness of the compiler from the Contract DSL to PEL, and
+          use Coq's code extraction feature, to obtain correct Haskell implementation of the compiler.
+        </p>
+        <h3><a target="_blank" href="https://github.com/annenkov/stlcnorm">
+            Normalisation for Simply-Typed Lambda-calculus in Coq</a>
+          [<a href="https://annenkov.github.io/stlcnorm/Stlc.stlc.html">nice-looking coqdoc-html version</a>]</h3>
+        <p>An elegant and self-contained proof of normalisation for call-by-value
+          simply-typed lambda calculus using Tait's method in the Coq proof assistant.</p>
+        <h3><a target="_blank" href="https://github.com/HIPERFIT/prototype">
+            The HIPERFIT Portfolio Management Prototype</a></h3>
+        <p>
+          Haskell implementation of a simple contract management system,
+          where contracts are represented using the
+          <a href="https://github.com/annenkov/contracts">Contract DSL</a>.
+          The prototype features web-interface with automatically generated input forms from
+          Haskell data type definitions, and integration with
+          <a href="https://github.com/HIPERFIT/finpar">FINPAR</a>
+          (high-performance pricing engine) through OpenCL code generation.
+        </p>
+        <h3><a target="_blank" href="https://github.com/annenkov/unmix">
+            UNMIX ported to Racket</a></h3>
+        <p>
+          A simple program specializer (based on partial evaluation) for a subset of Scheme,
+          originally developed by
+          <a target="_blank" href="http://pat.keldysh.ru/~roman/">Sergei Romanenko</a> in 1990-1993,
+          ported to the modern scheme-like
+          <a target="_blank" href="https://racket-lang.org/">Racket</a> language
+          to make UNMIX usable for wider audience.
+        </p>
+        <h3><a target="_blank" href="https://github.com/annenkov/unmix">
+            A minimal supercompiler for simple lazy language
+            (first-order functional language) written in Stratego/XT</a></h3>
+        <p>
+          An interpreter and minimal supercompiler for simple lazy language
+          (first-order functional language) written in Stratego/XT transformation language,
+          part of the Spoofax language workbench. Minimal supercompiler implementation
+          is inspired by the elegant Haskell implementation
+          <a target="_blank" href="https://github.com/ilya-klyuchnikov/sc-mini">SC Mini</a>.
+          Spoofax works on Eclipse platform and allows one to create full-featured
+          IDE plugin with syntax highlighting, perform semantic analysis and context completion.
+          My implementation aims to give an environment to experiment with
+          the supercompiler for educational purposes.
+        </p>
+      </div>
     </div>
-    <!-- /.container -->
+   <!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
