--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
+    <meta name="description" content="Danil Annenkov's web page">
+    <meta name="author" content="Danil Annenkov">
+    <!-- <link rel="icon" href="../../favicon.ico"> -->
 
     <title>Danil Annenkov</title>
 
@@ -210,6 +210,11 @@
           My implementation aims to give an environment to experiment with
           the supercompiler for educational purposes.
         </p>
+      </div>
+    </div>
+    <div id="footer">
+      <div class="container">
+        <p class="text-muted">Danil Annenkov, 2017</p>
       </div>
     </div>
    <!-- /.container -->
