--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <li><a href="#publications">Publications</a></li>
             <li><a href="#talks">Talks</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#CV">CV</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -131,11 +132,11 @@
         <ul>
           <li>Towards Certified Compilation of Financial Contracts.
             Nordic Workshop on Programming Theory(NWPT’16), November 2016.
-            [<a target="_blank" href="papers/NWPT16Slides.pdf">PDF</a>]
+            [<a target="_blank" href="papers/NWPT16Slides.pdf">Slides</a>]
           </li>
           <li>Verifying the generation of payoff-language expressions.
             <a target="_blank" href="http://hiperfit.dk/">HIPERFIT</a> Workshop, March 2016
-            [<a target="_blank" href="papers/HIPERFIT_Workshop_2016.pdf">PDF</a>]
+            [<a target="_blank" href="papers/HIPERFIT_Workshop_2016.pdf">Slides</a>]
           </li>
         </ul>
 
@@ -157,7 +158,7 @@
           in existing proof assistant. Using the definition of category from Lean's standard
           library, we define limits and construct general limits in the category of pretypes in the
           strict fragment. Also, we define inverse diagrams and show how some results of the
-          theory on inverse diagrams can be internalised in two-level type theory and developed in
+          theory of inverse diagrams can be internalised in two-level type theory and developed in
           the proof assistant.
         </p>
         <h3><a target="_blank" href="https://github.com/annenkov/contracts">
@@ -166,7 +167,9 @@
           An extension of the Contract DSL presented in
           <a target="_blank" href="https://github.com/annenkov/contracts/blob/master/doc/icfp2015.pdf">
           ICFP 2015 paper</a> with templating features, and certified compilation to a
-          simple intermediate payoff expression language (PEL). This expression language can be used to obtain so called  &quotpayoff expression&quot for using in a context of a &quotpricing engine&quot (software, that uses probabilistic modeling of possible future contract price using Monte-Carlo simulation).
+          simple intermediate payoff expression language (PEL). This expression language can be used to obtain so called
+          &quotpayoff expression&quot for using in a context of a &quotpricing engine&quot
+          (software, that uses probabilistic modeling of possible future contract price using Monte-Carlo simulation).
           We use Coq to prove soundness of the compiler from the Contract DSL to PEL, and
           use Coq's code extraction feature, to obtain correct Haskell implementation of the compiler.
         </p>
@@ -211,6 +214,8 @@
           the supercompiler for educational purposes.
         </p>
       </div>
+      <h2 id="CV" class="anchor">CV</h2>
+      <p>My CV in PDF format is available <a target="_blank" href="docs/CV_Annenkov.pdf">here</a>
     </div>
     <div id="footer">
       <div class="container">
