--- a/index.html
+++ b/index.html
@@ -54,16 +54,17 @@
       <div class="starter-template clearfix">
         <h1>Danil Annenkov's page</h1>
         <img src="img/DanilAnnenkov.png" alt="Photo" class="pull-left gap-right">
-        <p class="lead">Currently, I am a PhD student at University of Copenhagen
-          under the supervision of
-          <a href="http://www.elsman.com/" target="_blank">Martin Elsman</a></p>
+        <p class="lead">Currently, I am a postdoc at INRIA Nantes, working on
+          <a href="http://coqhott.gforge.inria.fr/" target="_blank">CoqHoTT project</a> with Nicolas Tabareau</p>
         <h3>Contacts</h3>
-        <p><strong>Address:</strong> Universitetsparken 5, Building B, office 01-0-006 <br>
-          2100 Copenhagen Ø <br>
-          Denmark<br>
+        <p><strong>Address:</strong>
+          LINA (main site)  <br>
+          UFR de Sciences et Techniques <br>
+          2 rue de la Houssinière <br>
+          Building 34, office 216 <br>
+          44300 Nantes, France<br>
         </p>
         <p><strong>Email</strong>: danil.v.annenkov at gmail.com</p>
-        <p><strong>Phone</strong>: +45 23 62 57 30</p>
       </div>
       <div id="main">
         <h2 id="research" class="anchor">Research interests</h2>
