--- a/index.html
+++ b/index.html
@@ -162,6 +162,14 @@
             on <a target="_blank" href="https://github.com/annenkov/">GitHub</a>,
             on <a target="_blank" href="https://bitbucket.org/ib_soft/">Bitbucket</a>
         </p>
+        <h3><a target="_blank" href="https://github.com/CoqHott/template-coq-forcing/tree/sprop">Forcing translation in Template Coq</a></h3>
+        <p>Implementation of the CBN forcing translation using typed meta-programing facilities of
+          Template Coq. Based on the OCaml forcing translation plugin (by Jaber, Pédrot, Sozeau,
+          Lewertowski and Tabareau, <a target="_blank"  href="https://github.com/CoqHott/coq-forcing"> link to the repo
+          </a>).
+          Current implementation uses the version of Coq supporting definitional proof-irrelevance
+          (by Gaëtan Gilbert, <a target="_blank"  href="https://github.com/SkySkimmer/coq"> link to the repo </a>).
+          </p>
         <h3><a target="_blank" href="https://github.com/annenkov/two-level">
             Two-level type theory</a></h3>
         <p>
