Added old papers on stochastic models for finance

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
         (Homotopy Type Theory extended with strict equality) in the Lean proof assistant.
         </p>
         <h2 id="publications" class="anchor">Publications</h2>
+        <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
         <ul>
           <li>Danil Annenkov, Martin Elsman. Certified Compilation of Financial Contracts. Under review PPDP’19.</li>
           <li>Martin Elsman, Troels Henriksen, Danil Annenkov, Cosmin Oancea.
@@ -114,6 +115,9 @@
             development​.  Proceedings of the conference “Vinerovskie chteniya”,
             pp. 142-146 (in Russian), 2013.
           </li>
+        </ul>
+        <h4 id="publications-model-driven" class="anchor">Model-Driven development, software generation</h4>
+        <ul>
           <li>
             Evgeny A. Cherkashin , Polina V. Belykh, Danil V. Annenkov, Christina K. Paskal.
             A Document Content Logical Layer Induction on the Base of Ontologies
@@ -131,6 +135,16 @@
             [<a target="_blank" href="http://www.tfzr.uns.ac.rs/aiit/old/archives/AIIT2012/Proceedings_AIIT2012.pdf">
               Proceedings
             </a>]
+          </li>
+        </ul>
+        <h4 id="publications-stochastic-models" class="anchor">Stochastic models in finance</h4>
+        <ul>
+          <li>
+            Annenkov, D.V., Simulation and research of the securities market.
+            Bulletin of the Irkutsk State Technical University, vol. 27, #3, pp. 68-71 (in Russian), 2006.
+          </li>
+          <li> Annenkov, D.V., Petukhov, P.A., Torbeeva, A.S.,
+            Modeling the organization and functioning of the securities market. Proceedings of conference “Vinerovskie chteniya”, pp. 35-40, 2005
           </li>
         </ul>
         <h2 id="talks" class="anchor">Talks</h2>
