--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <h2 id="publications" class="anchor">Publications</h2>
         <h4 id="publications-pl-typetheory" class="anchor">Programming languages, type theory and proof assistants</h4>
         <ul>
-          <li>Danil Annenkov, Martin Elsman. Certified Compilation of Financial Contracts. Under review PPDP’19.</li>
+          <li>Danil Annenkov, Martin Elsman. Certified Compilation of Financial Contracts. Accepted at PPDP’18.</li>
           <li>Martin Elsman, Troels Henriksen, Danil Annenkov, Cosmin Oancea.
-            Static Interpretation of Higher-Order Modules in Futhark, accepted at ICFP’18.
+            Static Interpretation of Higher-Order Modules in Futhark. Accepted at ICFP’18.
           </li>
           <li>Danil Annenkov, Paolo Capriotti, Nicolai Kraus.
             Two-Level Type Theory and Applications. Submitted to ACM Transactions on
