--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
           <li>Martin Elsman, Troels Henriksen, Danil Annenkov, Cosmin Oancea.
             Static Interpretation of Higher-Order Modules in Futhark. Accepted at ICFP’18.
           </li>
+          <li>Adventures in Formalisation: Financial Contracts, Modules, and Two-Level Type Theory. PhD thesis, University of Copenhagen, 2018
+          [<a target="_blank" href="papers/DanilAnnenkovThesis.pdf">PDF</a>]</li>
           <li>Danil Annenkov, Paolo Capriotti, Nicolai Kraus.
             Two-Level Type Theory and Applications. Submitted to ACM Transactions on
             Computational Logic (TOCL)
